# AI_TC_Generator_v04_w_Trainer

./: .env.example  .gitignore  ADDITIONAL_OUTPUT_FORMATS_PROPOSAL.md  AGENTS.md  BRANCH_WORKFLOW.md  CLAUDE.md  CLI_CONFIG_EXAMPLE_SUMMARY.md  CODEBASE_REVIEW_REPORT_2025-10-27.md  CODEBASE_REVIEW_REPORT_2025-10-29.md  CODEBASE_VALIDATION_REPORT.md  CRITICAL_IMPROVEMENTS_SUMMARY.md  Code_Efficiency_Review.md  Code_Review_Summary.md  Codex_review_Comments.md  Comprehensive_Comparison_Report.md  Copilot_Review_Comments.md  E2E_TEST_REPORT.md  ENHANCEMENT_SUMMARY.md  GEMINI.md  GROK.md  Gemini_Review_Comments.md  IMAGE_EXTRACTION_INTEGRATION_SUMMARY.md  IMAGE_TO_AI_GAP_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  OPTIONAL_TASKS_SUMMARY.md  OUTPUT_FORMAT_COMPATIBILITY.md  PR_DESCRIPTION.md  Python_Migration_Plan.md  README.md  README_HighPerformance.md  REQUIREMENTS_README.md  Review_Comment_Grok.md  Review_Comments.txt  Review_Comments_Copilot.md  Review_Comments_Gemini.md  Review_Comments_Grok.md  Review_Instructions.md  SECURITY.md  (+36 more)
.claude/: memory.db
.claude-flow/: CAPABILITIES.md  config.yaml  daemon-state.json
.claude-flow/metrics/: codebase-map.json  consolidation.json  learning.json  security-audit.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.claude-flow/swarm/: swarm-state.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.obsidian/: workspace.json
.swarm/: schema.sql  state.json
TEMP/: .gitignore  README.md
config/: cli_config.yaml
docs/: CLI_Messages.txt  EXPLORATION_SUMMARY.txt  Enhancement_Implementation_Guide.md  FAQ.md  IMAGE_EXTRACTION_INTEGRATION_ANALYSIS.md  INSTALLATION_GUIDE.md  MCP_Enhancement_Plan.md  RAFT_IMPLEMENTATION_VERIFICATION.md  RAFT_RE_REVIEW_REPORT.md  RAFT_SETUP_GUIDE.md  RAFT_Training_Implementation_Plan.md  README.md  REQIFZ_CODEBASE_EXPLORATION.md  REQIFZ_File_Structure.md  REQIFZ_Handling_Assessment.md  REQIFZ_REFERENCE.md  Review_Comments_2026_02_27.md  SECURITY_GUIDELINES.md  TRAINING_IMPLEMENTATION_GUIDE.md  Test_Design_Technique.md  USER_MANUAL.md  installation.md  prompt_documentation.md
docs/archive/: INIT_V03_COMPATIBILITY_SUMMARY.md  QUICK_START_V03_COMPATIBLE.md  TEST_SUMMARY.md  V03_COMPATIBILITY_FIXES.md  VERIFICATION_REPORT.md
docs/implementation/: INDEX.md
docs/misc/: JIRA_Requirement_Artifact_Types_v1.txt  JIRA_Requirement_Artifact_Types_v2.txt
docs/proposals/: CLI_CONFIGURATION_PROPOSAL.md  PROFILE_CONFIGURATION_PROPOSAL.md  logprobs_implementation_proposal.md
docs/reviews/: 2025-10-07_codebase_review.md  2025-10-11_codebase_review_findings.md  2025-10-11_comprehensive_review.md  2025-10-24_code_review.md  2025-12-05_Review_Comments_AntiGravity.md  2025-12-06_Progress_Summary.md  2025-12-06_Test_Verification_Report.md  2025-12-06_Vision_Implementation_Fix_Plan.md  README.md  Re_Review_Report_2025_12_31.md  Review_Comments_2025_12_06.md  Review_Comments_2025_12_31.md  Review_Comments_2026_03_02.md  Review_Comments_2026_04_06.md
docs/training/: GETTING_STARTED_WITH_TRAINING.md  MODEL_TRAINING_GUIDE.md  RAFT_TECHNICAL.md  TRAINING_GUIDE.md  VISION_TRAINING_GUIDE.md  training_guideline.md
hw/: Workstation.xml
input/: ARCHITECTURE_DIAGRAM.md  README_EXPLORATION.md
input/2025_09_12_S220/: MS22029826_SysFS04_Gauges_67ce0a.reqifz  MS22029826_SysFS12_Chimes_05afd4.reqifz  MS22029826_SysFS14_Settings_a6ae8c.reqifz  MS22029826_SysFS15_IC_IS_Communication_920aeb.reqifz  MS22029826_SysFS24_Alerts_f8db38.reqifz  SYSFS05_Telltales.reqifz
input/DIAG/: TFDCX32348_DIAG NM Diag ECU Sleep Diag_d6e509.reqifz  TFDCX32348_DIAG _ETM_Generic_7d5024.reqifz  TFDCX32348_DIAG_Drive_Recorder_645f5a.reqifz  TFDCX32348_DIAG_ETM_Buzzer beep_408626.reqifz  TFDCX32348_DIAG_ETM_DTC_cf9621.reqifz  TFDCX32348_DIAG_ETM_SW version_c86b8d.reqifz  TFDCX32348_DIAG_ETM_TFT color check_826162.reqifz  TFDCX32348_DIAG_Factory Test Mode_caad39.reqifz  TFDCX32348_GUI_DIAG_DiagSpecialDisplay_bae9b6.reqifz
input/REQIFZ_Files/: TFDCX32348_DIAG_DiagSpecialDisplay_c54dbe.reqifz  TFDCX32348_DIAG_Drive_Recorder_f89bf1.reqifz  TFDCX32348_DIAG_ETM_TFT color check_959c35.reqifz  TFDCX32348_GAU_AT_Oil_Temp_Gauge_b15677.reqifz  TFDCX32348_GAU_Oil pressure gauge_b85b72.reqifz  TFDCX32348_GAU_Water_Temp_Bar_b55574.reqifz  TFDCX32348_GUI_OdoTrip_Oil mileage_89ee44.reqifz  TFDCX32348_MM_NAV_Map_ETA_e4210e.reqifz  TFDCX32348_OPE_VoltageOperatingModes_a477db.reqifz  TFDCX32348_TT_ABS Telltale_cf7a87.reqifz  TFDCX32348_TT_AUTO LSD indicator_750870.reqifz  TFDCX32348_TT_BZR_MID_Seatbelt_Reminder_0e9c8c.reqifz  TFDCX32348_TT_Brake Red_af7167.reqifz  TFDCX32348_TT_Brake_HOLD Telltale_e07835.reqifz  TFDCX32348_TT_Cruise Control_fd1ba5.reqifz  TFDCX32348_TT_EV Mode_aa2b98.reqifz  (+7 more)
logs/: ai_tc_generator_structured.jsonl  ai_tc_generator_structured.jsonl.2025-09-15  ai_tc_generator_structured.jsonl.2025-10-01  ai_tc_generator_structured.jsonl.2025-10-07  ai_tc_generator_structured.jsonl.2025-10-31  ai_tc_generator_structured.jsonl.2025-12-12  ai_tc_generator_structured.jsonl.2026-02-27
output/: README.md
profiles/: profiles.yaml  sample-profiles-edited.yaml  sample-profiles.yaml
prompts/: prompt_documentation.md
src/: __init__.py  app_logger.py  config.py  custom_model_trainer.py  example_config.yaml  file_processing_logger.py  generate_contextual_tests_v002.py  generate_contextual_tests_v002_w_Logging_WIP.py  generate_contextual_tests_v002_with_training.py  generate_contextual_tests_v003_HighPerformance.py  main.py  training_data_collector.py  yaml_prompt_manager.py
tests/: __init__.py  conftest.py  coverage.xml  run_tests.py  test_critical_improvements.py  test_integration_refactored.py  test_python314_ollama0125.py  test_refactoring.py  verify_qwen_preset.py  verify_qwen_timeout.py
training_data/: README.md
utilities/: annotate_raft.py  build_vision_dataset.py  compare_v03_v04_output.py  create_mock_reqifz.py  requirements-all.txt  requirements-dev.txt  requirements-highperformance.txt  requirements.txt  train_vision_model.py  verify_v03_compatibility.py  version_check.py
(+104 files in other folders)
