[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "ai-tc-generator"
version = "2.3.0"
description = "AI-powered test case generator for automotive REQIF requirements"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "AI Test Case Generator Team"},
]
maintainers = [
    {name = "AI Test Case Generator Team"},
]
keywords = [
    "ai", "test-cases", "automotive", "reqif", "requirements",
    "testing", "ollama", "llama", "test-automation"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Markup :: XML",
]
requires-python = ">=3.14"
dependencies = [
    # Core production dependencies - Python 3.14 compatible
    "pandas>=2.2.3,<3.0.0",
    "requests>=2.32.3,<3.0.0",
    "PyYAML>=6.0.2,<7.0.0",
    "click>=8.1.8,<9.0.0",
    "rich>=13.9.4,<14.0.0",
    "openpyxl>=3.1.5,<4.0.0",
    "pydantic>=2.10.4,<3.0.0",
    "pydantic-settings>=2.7.0,<3.0.0",

    # Performance optimization dependencies
    "ujson>=5.10.0,<6.0.0",
    "urllib3>=2.3.0,<3.0.0",
    "aiohttp>=3.12.15,<4.0.0",
    "psutil>=6.1.0,<7.0.0",
]

[project.optional-dependencies]
# Development dependencies - Python 3.14 compatible
dev = [
    "pytest>=8.4.0,<9.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "pytest-asyncio>=0.25.2,<0.26.0",
    "mypy>=1.16.0,<2.0.0",
    "types-requests>=2.32.0,<3.0.0",
    "types-PyYAML>=6.0.0,<7.0.0",
    "ruff>=0.9.1,<1.0.0",
]

# Security scanning
security = [
    "pip-audit>=2.8.0,<3.0.0",
]

# Training and ML dependencies (Python 3.14 compatible)
training = [
    "torch>=2.6.0",
    "transformers>=4.48.0",
    "peft>=0.14.0",
    "datasets>=3.3.0",
    "wandb>=0.19.2",
]

# Complete development environment
all = [
    "ai-tc-generator[dev,security,training]",
]

[project.scripts]
ai-tc-generator = "main:main"
ai-tc-gen = "main:main"

[project.urls]
Documentation = "https://github.com/your-username/AI_TC_Generator_v04_w_Trainer#readme"
Repository = "https://github.com/your-username/AI_TC_Generator_v04_w_Trainer"
Issues = "https://github.com/your-username/AI_TC_Generator_v04_w_Trainer/issues"
Changelog = "https://github.com/your-username/AI_TC_Generator_v04_w_Trainer/releases"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/prompts",
    "/utilities",
    "/input",
    "/docs",
    "/README.md",
    "/CLAUDE.md",
    "/requirements.txt",
    "/pyproject.toml",
]

# ============================================================================
# DEVELOPMENT TOOL CONFIGURATIONS
# ============================================================================

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--ignore=src",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
norecursedirs = ["src"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "integration: Integration tests requiring external services (Ollama, file I/O)",
    "slow: Slow tests that take >5 seconds to complete",
    "unit: Fast unit tests with mocked dependencies",
    "async_test: Tests using async/await patterns",
]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "requests.*",
    "yaml.*",
    "openpyxl.*",
    "rich.*",
    "click.*",
    "aiohttp.*",
    "psutil.*",
    "ujson.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py314"
line-length = 100
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "htmlcov",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "PT",  # flake8-pytest-style
]
ignore = [
    "E501",  # Line too long, handled by formatter
    "B905",  # zip() without strict=, Python 3.10+
    "UP006", # Use `list` instead of `List` for type annotation
    "UP007", # Use `X | Y` instead of `Union[X, Y]`
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["PT", "ARG", "SIM"]
"utilities/**/*" = ["T201", "T203"]  # Allow print statements in utilities

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"